# Movie-Collection-Visualizer

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  index.css  index.html  main.js  no_ide_bs.gitignore  package-lock.json  package.json  renderer.js  tsconfig.json  uninstaller.nsh  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: deploy-website.yml
assets/: index-BEW-VIkR.js  index-BJ2H0wzv.css  index-BQVvS_18.js  index-zDvfFN58.css
docs/: index.css  index.html  index.js
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  importer.rs  lib.rs  main.rs  models.rs  omdb.rs  parser.rs  recommender.rs
src/assets/: main.css
src/components/dialogs/: AboutDialog.vue  ApiKeyDialog.vue  FirstTimeDialog.vue  FixFailedImportsDialog.vue  MovieDetailDialog.vue  WrongMovieDialog.vue
src/components/home/: HeroBanner.vue  MovieRow.vue  MovieRowCard.vue  RecommendationCard.vue
src/components/layout/: AppSidebar.vue  GlobalToast.vue  StatusBar.vue
src/components/profile/: SettingsPanel.vue  StatsDashboard.vue
src/components/search/: FilterBar.vue  MovieGrid.vue  MovieGridCard.vue  SearchBar.vue  SortDropdown.vue
src/components/shared/: GenreBadge.vue  MoviePoster.vue  RatingBadge.vue
src/lib/: utils.ts
src/router/: index.ts
src/stores/: dialog.ts  import.ts  movies.ts  settings.ts  toast.ts
src/types/: import.ts  movie.ts  settings.ts
src/views/: HomeView.vue  ProfileView.vue  SearchView.vue
website/: index.html  package-lock.json  package.json  vite.config.js
website/src/: App.vue  style.css
website/src/components/: DownloadCTA.vue  FeatureIcon.vue  FeaturesLayout.vue  Footer.vue  HeroBackground.vue  HeroSection.vue  HowItWorks.vue  NavBar.vue  ScreenshotsSection.vue  StatsTeaser.vue
