[package]
name = "movie-collection-visualizer"
version = "2.2.1"
description = "Movie Collection Visualizer"
authors = ["you"]
edition = "2021"
default-run = "movie-collection-visualizer"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.0.0"
tauri-plugin-shell = "2.0.0"
tauri-plugin-fs = "2.0.0"
tauri-plugin-opener = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
chrono = "0.4"
rand = "0.8"

[features]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "movie-collection-visualizer"
path = "src/main.rs"

[[bin]]
name = "csv_generator"
path = "src/bin/csv_generator.rs"
