[package]
name = "movie-collection-visualizer"
version = "2.3.1"
description = "Movie Collection Visualizer"
authors = ["iso53"]
edition = "2024"
default-run = "movie-collection-visualizer"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-shell = "2.3.5"
tauri-plugin-fs = "2.5.1"
tauri-plugin-opener = "2.5.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rusqlite = { version = "0.39.0", features = ["bundled"] }
reqwest = { version = "0.13.3", features = ["json", "stream", "query"] }
tokio = { version = "1.52.2", features = ["full"] }
futures-util = "0.3.32"
chrono = "0.4.44"
rand = "0.10.1"

[features]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "movie-collection-visualizer"
path = "src/main.rs"

[[bin]]
name = "csv_generator"
path = "src/bin/csv_generator.rs"
